k8s/templates/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eureka

spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels: 
        app: eureka
    spec:
      containers:
        - name: eureka
          image: eureka:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 8761
