k8s/templates/offers-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: offers-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: offers:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 1001
