k8s/templates/eureka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: eureka-service

spec:
  selector:
    app: eureka
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8761
      port: 8761
