k8s/templates/offers-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: offers-service

spec:
  type: ClusterIP
  selector:
    app: offers
  ports:
    - protocol: TCP
      targetPort: 1001
      port: 1001
