k8s/templates/shoes-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shoes-service

spec:
  type: ClusterIP
  selector:
    app: shoes
  ports:
    - protocol: TCP
      targetPort: 1002
      port: 1002
